--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,7 +32,14 @@ spring:
             authorization-uri: https://nid.naver.com/oauth2.0/authorize
             token-uri: https://nid.naver.com/oauth2.0/token
             user-info-uri: https://openapi.naver.com/v1/nid/me
-            user-name-attribute: response # ?????? ???? response
+            user-name-attribute: response # response
 
   jwt:
     secret: ${jwt_secret}
+
+  web:
+    resources:
+      add-mappings: false
+
+  profiles:
+    active: dev
