--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,9 @@ jobs:
           java-version: 17
 
       - name: application.yml 파일 생성하기
-        run: echo "${{secrets.APPLICATION_PROPERTIES}}" > ./src/main/resources/application.yml
+        run: |
+          mkdir -p ./src/main/resources
+          echo "${{secrets.APPLICATION_PROPERTIES}}" > ./src/main/resources/application.yml
 
       - name: 테스트 및 빌드
         run: ./gradlew clean build
