--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,9 @@ jobs:
           mkdir -p ./src/main/resources
           echo "${{secrets.APPLICATION_PROPERTIES}}" > ./src/main/resources/application.yml
 
+      - name: gradlew 실행 권한 부여
+        run: chmod +x ./gradlew
+
       - name: 테스트 및 빌드
         run: ./gradlew clean build
 
