--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,6 +59,11 @@ jobs:
             echo "[INFO] 프라이빗 서버용 키 생성 중..."
             echo "${{secrets.EC2_PRIVATE_KEY}}" > /tmp/private_key.pem
             chmod 600 /tmp/private_key.pem
+            
+             echo "[INFO] 프라이빗 서버 디렉토리 초기화 중..."
+            ssh -i /tmp/private_key.pem -o StrictHostKeyChecking=no ubuntu@10.0.1.38 "\
+            mkdir -p /home/ubuntu/was/server && \
+            rm -rf /home/ubuntu/was/server/*"
 
             echo "[INFO] 프라이빗 서버로 JAR 파일 전송 중..."
             scp -i /tmp/private_key.pem -o StrictHostKeyChecking=no \
@@ -66,5 +71,51 @@ jobs:
 
             echo "[INFO] 임시 키파일 삭제 중..."
             rm -f /tmp/private_key.pem
+            
+
+      - name: SSH로 Bastion HOST에 접속해 jar 실행 테스트만 수행
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{secrets.EC2_HOST}}
+          username: ${{secrets.EC2_USERNAME}}
+          key: ${{secrets.EC2_PRIVATE_KEY}}
+          script: |
+            echo "[INFO] 프라이빗 서버용 키 생성 중..."
+            echo "${{secrets.EC2_PRIVATE_KEY}}" > /tmp/private_key.pem
+            chmod 600 /tmp/private_key.pem
+      
+            echo "[INFO] JAR 파일 테스트 실행 중..."
+            ssh -i /tmp/private_key.pem -o StrictHostKeyChecking=no ubuntu@10.0.1.38 "\
+              nohup java -jar /home/ubuntu/was/server/project.jar > /home/ubuntu/was/server/app.log 2>&1 & \
+              sleep 5 && \
+              pgrep -f 'project.jar' > /dev/null"
+      
+            if [ $? -ne 0 ]; then
+              echo '[ERROR] JAR 실행 실패!'; exit 1;
+            else
+              echo '[SUCCESS] JAR 실행 성공!';
+            fi
+      
+            echo "[INFO] 실행된 JAR 프로세스 종료 중..."
+            ssh -i /tmp/private_key.pem -o StrictHostKeyChecking=no ubuntu@10.0.1.38 "\
+              pkill -f 'project.jar'"
+      
+            echo "[INFO] 임시 키파일 삭제 중..."
+            rm -f /tmp/private_key.pem
+
+      - name: 프라이빗 서버 로그 확인 (최근 20줄)
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{secrets.EC2_HOST}}
+          username: ${{secrets.EC2_USERNAME}}
+          key: ${{secrets.EC2_PRIVATE_KEY}}
+          script: |
+            echo "${{secrets.EC2_PRIVATE_KEY}}" > /tmp/private_key.pem
+            chmod 600 /tmp/private_key.pem
+      
+            ssh -i /tmp/private_key.pem -o StrictHostKeyChecking=no ubuntu@10.0.1.38 "\
+              tail -n 20 /home/ubuntu/was/server/app.log || echo '[WARN] 로그 파일이 존재하지 않습니다.'"
+            rm -f /tmp/private_key.pem
+
 
 
