--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,7 +60,7 @@ jobs:
             echo "${{secrets.EC2_PRIVATE_KEY}}" > /tmp/private_key.pem
             chmod 600 /tmp/private_key.pem
             
-             echo "[INFO] 프라이빗 서버 디렉토리 초기화 중..."
+            echo "[INFO] 프라이빗 서버 디렉토리 초기화 중..."
             ssh -i /tmp/private_key.pem -o StrictHostKeyChecking=no ubuntu@10.0.1.38 "\
             mkdir -p /home/ubuntu/was/server && \
             rm -rf /home/ubuntu/was/server/*"
@@ -97,7 +97,7 @@ jobs:
             echo "[INFO] 임시 키파일 삭제 중..."
             rm -f /tmp/private_key.pem
 
-      - name: 프라이빗 서버 로그 확인
+      - name: WAS 서버 로그 확인
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{secrets.EC2_HOST}}
@@ -111,5 +111,18 @@ jobs:
               cat /home/ubuntu/was/server/app.log || echo '[WARN] 로그 파일이 존재하지 않습니다.'"
             rm -f /tmp/private_key.pem
 
+
+      - name: WAS 서버 기동
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{secrets.EC2_HOST}}
+          username: ${{secrets.EC2_USERNAME}}
+          key: ${{secrets.EC2_PRIVATE_KEY}}
+          script: |
+            ssh -i /tmp/private_key.pem -o StrictHostKeyChecking=no ubuntu@10.0.1.38 "\
+              sudo fuser -k -n tcp 8080 || true && \
+              nohup java -jar /home/ubuntu/was/server/project.jar > /home/ubuntu/was/server/running.log 2>&1 &"
+            
+            
 
 
