--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -119,9 +119,14 @@ jobs:
           username: ${{secrets.EC2_USERNAME}}
           key: ${{secrets.EC2_PRIVATE_KEY}}
           script: |
+            echo "${{secrets.EC2_PRIVATE_KEY}}" > /tmp/private_key.pem
+            chmod 600 /tmp/private_key.pem
+            
             ssh -i /tmp/private_key.pem -o StrictHostKeyChecking=no ubuntu@10.0.1.38 "\
               sudo fuser -k -n tcp 8080 || true && \
               nohup java -jar /home/ubuntu/was/server/project.jar > /home/ubuntu/was/server/running.log 2>&1 &"
+            
+            rm -f /tmp/private_key.pem
             
             
 
