--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,11 +23,24 @@ jobs:
           mkdir -p ./src/main/resources
           echo "${{secrets.APPLICATION_PROPERTIES}}" > ./src/main/resources/application.yml
 
+      - name: 테스트용 application_test.yml 파일 생성하기
+        run: |
+          mkdir -p ./src/test/resources
+          echo "${{secrets.APPLICATION_TEST_PROPERTIES}}" > ./src/test/resources/application-test.yml
+
+      # 2) 테스트 전용 H2 설정
       - name: gradlew 실행 권한 부여
         run: chmod +x ./gradlew
 
-      - name: 테스트 및 빌드
-        run: ./gradlew clean build
+      # 3) H2 프로파일로 테스트 실행
+      - name: application-test.yml 을 통해 생성된 테스트용 jar 실행 (H2 프로파일)
+        env:
+          SPRING_PROFILES_ACTIVE: test
+        run: ./gradlew test
+
+      # 4) 실제 배포용 JAR 빌드 (테스트 스킵)
+      - name: application.yml 을 통한 실행 용 빌드
+        run: ./gradlew clean bootJar -x test
 
       - name: 빌드된 파일 이름 변경
         run: mv ./build/libs/*SNAPSHOT.jar  ./project.jar
