--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,12 +23,25 @@ jobs:
           mkdir -p ./src/main/resources
           echo "${{secrets.APPLICATION_PROPERTIES}}" > ./src/main/resources/application.yml
 
-      - name: 테스트용 application_test.yml 파일 생성하기
+      - name: application-test.yml 생성 (H2 override)
         run: |
-          mkdir -p ./src/test/resources
-          echo "${{secrets.APPLICATION_TEST_PROPERTIES}}" > ./src/test/resources/application-test.yml
+          mkdir -p src/test/resources
+          cat << 'EOF' > src/test/resources/application-test.yml
+          spring:
+            profiles: test
+      
+            datasource:
+              driver-class-name: org.h2.Driver
+              url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+              username: sa
+              password:
+      
+            jpa:
+              hibernate:
+                ddl-auto: create-drop
+          EOF
 
-      # 2) 테스트 전용 H2 설정
+      # 2) gradle 설정
       - name: gradlew 실행 권한 부여
         run: chmod +x ./gradlew
 
