--- a/.gitignore
+++ b/.gitignore
@@ -36,4 +36,7 @@ out/
 ### VS Code ###
 .vscode/
 
+### application.yml ###
+/src/main/resources/application.yml
+/src/main/resources/application.properties
 
